# mcp-fadr-server

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: api_contract.md  architecture.md  development.md  security.md
examples/: example_requests.json  example_responses.json
server/: exceptions.py  main.py
server/clients/: base.py  fadr_client.py  http_audio_fetcher.py  mock_client.py
server/schemas/: envelope.py  fadr_responses.py  inputs.py  outputs.py
server/services/: stem_service.py
server/tools/: analyze_music.py  extract_midi.py  separate_stems.py
server/transport/: mcp_server.py
server/utils/: config.py  logging.py  url_validator.py
tests/: conftest.py  helpers.py
tests/golden/: test_golden_outputs.py
tests/unit/: test_audio_fetcher.py  test_client_errors.py  test_fadr_client.py  test_schemas.py  test_stem_service.py  test_tools.py
